--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -25,9 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/profile"><button class="btn-link btn btn-sm">Profile</button></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile/edit"><button class="btn-link btn btn-sm">Edit Profile</button></a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="/profile/edit"><button class="btn-link btn btn-sm">Edit Profile</button></a>-->
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/task/create"><button class="btn-link btn btn-sm">Create Task</button></a>
                 </li>
