--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -15,6 +15,43 @@
         <div>
             <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">
             <p th:text="${user.getUsername()}"></p>
+
+<!--            Offcanvas START-->
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                Edit Profile
+            </button>
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Edit Profile</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+
+                <div class="offcanvas-body">
+                    <form th:action="@{|/profile/edit/${user.id}|}" method="POST" th:object="${user}">
+                        <div class="form-group mb-3">
+                            <label for="firstname">First name</label>
+                            <input id="firstname" th:field="*{firstName}" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="lastname">Last name</label>
+                            <input id="lastname" th:field="*{lastName}" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="username">user-name</label>
+                            <input id="username" th:field="*{username}" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="email">Email</label>
+                            <input id="email" th:field="*{email}" class="form-control" required>
+                        </div>
+                        <button type="submit" class="btn btn-sm">Update Profile info</button>
+                    </form>
+                </div>
+
+            </div>
+<!--            Offcanvas END-->
+
             <button type="button" id="file-stack-picBtn" class="btn btn-primary btn-sm">Choose profile picture</button>
             <button th:if="${#strings.contains(user.getProfilePic(), 'https')}" type="button" id="default-picBtn" class="btn btn-primary btn-sm">Delete profile picture</button>
 
