--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -14,7 +14,7 @@
         
         <div>
             <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">
-            <p th:text="${user.getUsername()}"></p>
+            <p th:text="${user.getUsername()}" id="user-usernameDisplay"></p>
 
 <!--            Offcanvas START-->
             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -28,24 +28,24 @@
                 </div>
 
                 <div class="offcanvas-body">
-                    <form th:action="@{|/profile/edit/${user.id}|}" method="POST" th:object="${user}">
+                    <form th:action="@{|/profile/edit/${user.id}|}" method="POST" th:object="${user}" id="profile-edit-form">
                         <div class="form-group mb-3">
-                            <label for="firstname">First name</label>
-                            <input id="firstname" th:field="*{firstName}" class="form-control" required>
+                            <label for="firstname-edit">First name</label>
+                            <input id="firstname-edit" th:field="*{firstName}" class="form-control" required>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="lastname">Last name</label>
-                            <input id="lastname" th:field="*{lastName}" class="form-control" required>
+                            <label for="lastname-edit">Last name</label>
+                            <input id="lastname-edit" th:field="*{lastName}" class="form-control" required>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="username">user-name</label>
-                            <input id="username" th:field="*{username}" class="form-control" required>
+                            <label for="username-edit">user-name</label>
+                            <input id="username-edit" th:field="*{username}" class="form-control" required>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="email">Email</label>
-                            <input id="email" th:field="*{email}" class="form-control" required>
+                            <label for="email-edit">Email</label>
+                            <input id="email-edit" th:field="*{email}" class="form-control" required>
                         </div>
-                        <button type="submit" class="btn btn-sm">Update Profile info</button>
+                        <button type="submit" class="btn btn-sm" id="update-profileBtn">Update Profile info</button>
                     </form>
                 </div>
 
@@ -275,6 +275,7 @@
 
 <script th:src="@{js/taskModalConfirmations.js}"></script>
 <script th:src="@{js/file-picker.js}"></script>
+
 
 </body>
 </html>
