--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -11,6 +11,12 @@
 
     <main class="container">
         <h1>THIS IS YOUR PROFILE PAGE</h1>
+        <div th:if="${param.invalidUsername}">
+            Unable to change username, username already exists.
+        </div>
+        <div th:if="${param.invalidEmail}">
+            Unable to change email, email already exists.
+        </div>
         
         <div>
             <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">
