--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -17,6 +17,9 @@
         <div th:if="${param.invalidEmail}">
             Unable to change email, email already exists.
         </div>
+        <div th:if="${param.emptyFields}">
+            Please ensure to fill all form fields.
+        </div>
         
         <div>
             <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">
