--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -15,6 +15,10 @@
         <div th:if="${param.invalidEmail}">
             Unable to use email, email already exists.
         </div>
+        <div th:if="${param.emptyFields}">
+            Please ensure to fill all form fields.
+        </div>
+
         <h1>Create an account</h1>
         <form th:action="@{/sign-up}" method="POST" th:object="${user}">
 
