--- a/src/main/resources/templates/task/task-create.html
+++ b/src/main/resources/templates/task/task-create.html
@@ -13,12 +13,12 @@
 
             <div class="form-group mb-3">
                 <label for="title">Title</label>
-                <input th:field="*{title}" type="text" name="title" id="title" class="form-control">
+                <input th:field="*{title}" type="text" name="title" id="title" class="form-control" required>
             </div>
 
             <div class="form-group mb-3">
                 <label for="body">Description</label>
-                <textarea th:field="*{description}" name="body" id="body" class="form-control"></textarea>
+                <textarea th:field="*{description}" name="body" id="body" class="form-control" required></textarea>
             </div>
 
             <!-- Checkbox for scheduling -->
