--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -31,7 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/task/create"><button class="btn-link btn btn-sm">Create Task</button></a>
                 </li>
-                <li class="nav-item ms-auto">
+                <li class="nav-item">
                     <a class="nav-link" href="/sign-up"><button class="btn-link btn btn-sm">Register</button></a>
                 </li>
                 <li class="nav-item">
