--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -8,49 +8,54 @@
   <header th:replace="/partials/partials :: header('Edit Task')"></header>
 
   <main class="container">
-    <h2>Edit Task</h2>
+
     <form th:method="POST" th:action="@{|/task/edit/${task.id}|}" th:object="${task}">
+<!--    adjusting form's width & center start -->
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="form-group mb-3">
+            <label for="title">Title</label>
+            <input th:field="*{title}" type="text" name="title" id="title" class="form-control" required>
+          </div>
 
-      <div class="form-group mb-3">
-        <label for="title">Title</label>
-        <input th:field="*{title}" type="text" name="title" id="title" class="form-control" required>
-      </div>
+          <div class="form-group mb-3">
+            <label for="body">Description</label>
+            <textarea th:field="*{description}" name="body" id="body" class="form-control" required></textarea>
+          </div>
 
-      <div class="form-group mb-3">
-        <label for="body">Description</label>
-        <textarea th:field="*{description}" name="body" id="body" class="form-control" required></textarea>
-      </div>
+          <!-- Checkbox for scheduling -->
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" name="scheduleCheckbox" id="scheduleCheckbox" th:checked="${!#strings.contains(task.dateScheduled, '1969')}">
+            <label class="form-check-label" for="scheduleCheckbox">Schedule Task</label>
+          </div>
 
-      <!-- Checkbox for scheduling -->
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" name="scheduleCheckbox" id="scheduleCheckbox" th:checked="${!#strings.contains(task.dateScheduled, '1969')}">
-        <label class="form-check-label" for="scheduleCheckbox">Schedule Task</label>
-      </div>
+          <!-- DateScheduled input (initially hidden) -->
+          <div th:if="${!#strings.contains(task.dateScheduled, '1969')}" id="dateScheduledField" style="display: block;">
+            <div class="form-group mb-3">
+              <label for="dateScheduled">Scheduled Date</label>
+              <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
+            </div>
+          </div>
+          <div th:if="${#strings.contains(task.dateScheduled, '1969')}" id="dateScheduledField" style="display: none;">
+            <div class="form-group mb-3">
+              <label for="dateScheduled">Scheduled Date</label>
+              <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
+            </div>
+          </div>
 
-      <!-- DateScheduled input (initially hidden) -->
-      <div th:if="${!#strings.contains(task.dateScheduled, '1969')}" id="dateScheduledField" style="display: block;">
-        <div class="form-group mb-3">
-          <label for="dateScheduled">Scheduled Date</label>
-          <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
+          <!--   for category  -->
+          <div class="form-group mb-3">
+            <label for="category">Category</label>
+            <select th:field="*{category.id}" class="form-control" id="category">
+              <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.title}"></option>
+            </select>
+          </div>
+
+
+          <button class="btn btn-dark" type="submit">Submit</button>
         </div>
       </div>
-      <div th:if="${#strings.contains(task.dateScheduled, '1969')}" id="dateScheduledField" style="display: none;">
-        <div class="form-group mb-3">
-          <label for="dateScheduled">Scheduled Date</label>
-          <input th:field="*{dateScheduled}" type="date" name="dateScheduled" id="dateScheduled" class="form-control">
-        </div>
-      </div>
-
-      <!--   for category  -->
-      <div class="form-group mb-3">
-        <label for="category">Category</label>
-        <select th:field="*{category.id}" class="form-control" id="category">
-          <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.title}"></option>
-        </select>
-      </div>
-
-
-      <button class="btn btn-dark" type="submit">Submit</button>
+<!--      adjusting form's width & center end -->
     </form>
   </main>
 
