--- a/src/main/resources/templates/task/task-create.html
+++ b/src/main/resources/templates/task/task-create.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/partials/partials :: head('Create')"></head>
+<head th:replace="partials/partials :: head('Create')"></head>
 <body>
 
 <div id="wrapper">
-    <nav th:replace="/partials/partials :: nav"></nav>
-    <header th:replace="/partials/partials :: header('Create')"></header>
+    <nav th:replace="partials/partials :: nav"></nav>
+    <header th:replace="partials/partials :: header('Create')"></header>
 
     <main class="container">
         <form th:method="POST" th:action="@{/task/create}" th:object="${task}">
@@ -53,10 +53,10 @@
         </form>
     </main>
 
-    <footer th:replace="/partials/partials :: footer"></footer>
+    <footer th:replace="partials/partials :: footer"></footer>
 </div>
 
-<th:block th:replace="/partials/partials :: scripts"></th:block>
+<th:block th:replace="partials/partials :: scripts"></th:block>
 
 <script>
 
