--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/partials :: head('Profile')">
+<head th:replace="partials/partials :: head('Task Hub')">
 
 </head>
 <body>
 
 <div id="wrapper">
     <nav th:replace="partials/partials :: nav"></nav>
-    <header th:replace="partials/partials :: header('Profile')"></header>
+    <header th:replace="partials/partials :: header('Task-Hub')"></header>
 
     <main class="container">
 
