changed style to sketchy

--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/partials :: head('Edit Task')"></head>
+<head th:replace="partials/partials :: head('Task-Revise')"></head>
 <body>
 
 <div id="wrapper">
   <nav th:replace="partials/partials :: nav"></nav>
-  <header th:replace="partials/partials :: header('Edit Task')"></header>
+  <header th:replace="partials/partials :: header('Task-Revise')"></header>
 
   <main class="container">
 
