view profile complete

--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -33,7 +33,7 @@
                 <li class="nav-item">
                     <a class="nav-link">
                         <button class="btn-link btn btn-sm" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" id="editProfileBtn">
-                            Profile
+                            View Profile
                         </button>
                     </a>
                 </li>
