--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -75,6 +75,7 @@
 <!--        ROW START -->
         <div class="row">
             <div class="col-md-6">
+                <hr>
                 <!-- Pretty scheduled task test START -->
                 <h2>Target date tasks</h2>
                 <div th:each="task : ${scheduledTasks}">
@@ -92,6 +93,7 @@
                     </div>
                 </div>
                 <!--   Pretty scheduled task test END -->
+                <hr>
             </div>
         </div>
 <!--        ROW END -->
@@ -102,7 +104,8 @@
         <div class="row">
 <!--    COLUMN FOR INCOMPLETE TASKS START-->
             <div class="col-md-6">
-                <h2>In progress tasks</h2>
+                <hr>
+                <h2>In Progress Tasks</h2>
                 <div class="accordion" id="incompleteTasksAccordion">
                     <div th:each="task : ${incompleteTasks}" th:id="'task-' + ${task.id}">
                         <div class="accordion-item">
@@ -172,10 +175,12 @@
                         </div>
                     </div>
                 </div>
+                <hr>
             </div>
 <!--    COLUMN FOR INCOMPLETE TASKS END-->
 <!--    COLUMN FOR COMPLETE TASKS START -->
             <div class="col-md-6">
+                <hr>
                 <h2>Completed Tasks</h2>
                 <div class="accordion" id="completeTasksAccordion">
                     <div th:each="task : ${completeTasks}">
@@ -241,6 +246,7 @@
                         </div>
                     </div>
                 </div>
+                <hr>
             </div>
 <!--    COLUMN FOR COMPLETE TASKS END -->
         </div>
